# Video-player

./: CMakeLists.txt  FileDialog.qml  Main.qml  main.cpp  main.qrc
